🚧Updated class path.

--- a/.classpath
+++ b/.classpath
@@ -115,6 +115,7 @@
 	<classpathentry kind="lib" path="C:/Program Files/Katalon/plugins/com.google.http-client.google-http-client_1.22.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Katalon/plugins/ca.juliusdavies.not-yet-commons-ssl_0.3.11.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Katalon/plugins/com.kms.katalon.preferences_1.0.0.201908140948.jar"/>
+	<classpathentry kind="lib" path="C:/dev/github_katalon_test/github_katalon_test/Plugins/katalon-studio-report-plugin.jar"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
